tests/ui/statics/check-values-constraints.stderr
error[E0493]: destructor of `SafeStruct` cannot be evaluated at compile-time
  --> $DIR/check-values-constraints.rs:64:7
   |
LL |       ..SafeStruct {
   |  _______^
LL | |
LL | |         field1: SafeEnum::Variant3(WithDtor),
LL | |         field2: SafeEnum::Variant1,
LL | |     }
   | |_____^ the destructor for this type cannot be evaluated in statics
LL |   };
   |   - value is dropped here

error[E0015]: cannot call non-const function `non_const::<MyOwned>` in statics
  --> $DIR/check-values-constraints.rs:85:33
   |
LL | static STATIC11: Vec<MyOwned> = non_const(MyOwned);
   |                                 ^^^^^^^^^^^^^^^^^^
   |
note: function `non_const` is not const
  --> $DIR/check-values-constraints.rs:71:1
   |
LL | fn non_const<T>(value: T) -> Vec<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: calls in statics are limited to constant functions, tuple structs and tuple variants
   = note: consider wrapping this expression in `std::sync::LazyLock::new(|| ...)`

error[E0015]: cannot call non-const method `<str as ToString>::to_string` in statics
  --> $DIR/check-values-constraints.rs:95:38
   |
LL |     field2: SafeEnum::Variant4("str".to_string()),
   |                                      ^^^^^^^^^^^
   |
note: method `to_string` is not const because trait `ToString` is not const
  --> $SRC_DIR/alloc/src/string.rs:LL:COL
   |
   = note: this trait is not const
  ::: $SRC_DIR/alloc/src/string.rs:LL:COL
   |
   = note: this method is not const
   = note: calls in statics are limited to constant functions, tuple structs and tuple variants
   = note: consider wrapping this expression in `std::sync::LazyLock::new(|| ...)`

error[E0015]: cannot call non-const function `non_const::<MyOwned>` in statics
  --> $DIR/check-values-constraints.rs:99:5
   |
LL |     non_const(MyOwned),
   |     ^^^^^^^^^^^^^^^^^^
   |
note: function `non_const` is not const
  --> $DIR/check-values-constraints.rs:71:1
   |
LL | fn non_const<T>(value: T) -> Vec<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: calls in statics are limited to constant functions, tuple structs and tuple variants
   = note: consider wrapping this expression in `std::sync::LazyLock::new(|| ...)`

error[E0015]: cannot call non-const function `non_const::<MyOwned>` in statics
  --> $DIR/check-values-constraints.rs:100:5
   |
LL |     non_const(MyOwned),
   |     ^^^^^^^^^^^^^^^^^^
   |
note: function `non_const` is not const
  --> $DIR/check-values-constraints.rs:71:1
   |
LL | fn non_const<T>(value: T) -> Vec<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: calls in statics are limited to constant functions, tuple structs and tuple variants
   = note: consider wrapping this expression in `std::sync::LazyLock::new(|| ...)`

error[E0015]: cannot call non-const function `non_const::<MyOwned>` in statics
  --> $DIR/check-values-constraints.rs:104:6
   |
LL |     &non_const(MyOwned),
   |      ^^^^^^^^^^^^^^^^^^
   |
note: function `non_const` is not const
  --> $DIR/check-values-constraints.rs:71:1
   |
LL | fn non_const<T>(value: T) -> Vec<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: calls in statics are limited to constant functions, tuple structs and tuple variants
   = note: consider wrapping this expression in `std::sync::LazyLock::new(|| ...)`

error[E0015]: cannot call non-const function `non_const::<MyOwned>` in statics
  --> $DIR/check-values-constraints.rs:105:6
   |
LL |     &non_const(MyOwned),
   |      ^^^^^^^^^^^^^^^^^^
   |
note: function `non_const` is not const
  --> $DIR/check-values-constraints.rs:71:1
   |
LL | fn non_const<T>(value: T) -> Vec<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: calls in statics are limited to constant functions, tuple structs and tuple variants
   = note: consider wrapping this expression in `std::sync::LazyLock::new(|| ...)`

error[E0015]: cannot call non-const function `non_const::<isize>` in statics
  --> $DIR/check-values-constraints.rs:110:31
   |
LL | static STATIC19: Vec<isize> = non_const(3);
   |                               ^^^^^^^^^^^^
   |
note: function `non_const` is not const
  --> $DIR/check-values-constraints.rs:71:1
   |
LL | fn non_const<T>(value: T) -> Vec<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: calls in statics are limited to constant functions, tuple structs and tuple variants
   = note: consider wrapping this expression in `std::sync::LazyLock::new(|| ...)`

error[E0015]: cannot call non-const function `non_const::<isize>` in statics
  --> $DIR/check-values-constraints.rs:115:32
   |
LL |         static x: Vec<isize> = non_const(3);
   |                                ^^^^^^^^^^^^
   |
note: function `non_const` is not const
  --> $DIR/check-values-constraints.rs:71:1
   |
LL | fn non_const<T>(value: T) -> Vec<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: calls in statics are limited to constant functions, tuple structs and tuple variants
   = note: consider wrapping this expression in `std::sync::LazyLock::new(|| ...)`

error[E0507]: cannot move out of static item `x`
  --> $DIR/check-values-constraints.rs:116:9
   |
LL |         x
   |         ^ move occurs because `x` has type `Vec<isize>`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |         &x
   |         +
help: consider cloning the value if the performance cost is acceptable
   |
LL |         x.clone()
   |          ++++++++

error: aborting due to 10 previous errors

Some errors have detailed explanations: E0015, E0493, E0507.
For more information about an error, try `rustc --explain E0015`.
